style.css
/* ... */
@media only screen and (min-width: 761px) {
  .page-template-page-academic-group #container {
    float: right;
    margin: 0 0 0 -240px;
  }
  .page-template-page-academic-group #content {
    margin: 0 0 0 280px;
  }
  .page-template-page-academic-group #primary {
    float: left;
  }
}

body header {
  border-bottom: none;
}

#header_mid {
  padding-top: 16px;
}
@media only screen and (min-width: 761px) {
  #header_mid {
    height: 110px;
  }
}

.site-name-description {
  align-items: center;
  color: #222;
  display: flex;
  text-decoration: none;
  z-index: 90;
}

.site-name-description:hover,
.site-name-description:focus,
.site-name-description:active {
  color: #024731;
  text-decoration: none;
  opacity: .7;
}

.site-name-description:visited,
.site-name-description:link {
  color: inherit;
}

.site-name-description .image {
  box-sizing: border-box;
  height: auto;
  margin-right: 20px;
  width: 60px;
}

.site-name-description h1 > div {
  color: inherit;
  display: block;
  line-height: 1.3;
}

.site-name-description h1 > .uhm-title {
  font-size: .7em;
  position: relative;
  white-space: nowrap;
}

.site-name-description h1 > .uhm-title .manoa {
  display: inline-block;
  padding-left: 10px;
}

.site-name-description h1 > .site-title {
  font-size: .8em;
  font-weight: 400;
}

@media only screen and (max-width: 760px) {
  header #header_mid form.search-form {
    display: flex;
  }
}

.registered-trademark {
  font-size: .7em;
  font-weight: 400;
  position: absolute;
}

.entry-content {
  padding-top: 24px;
}

@media only screen and (max-width: 760px) {
  #header_sitename {
    font-size: 1.4em;
  }
  a.site-name-description {
    display: flex;
    justify-content: center;
  }
  .site-name-description .image {
    flex-basis: 50px;
    margin-right: 10px;
    width: 50px;
  }
  #header_btm_content {
    text-align: left;
  }
}

body:not(.home) #department_name > .container {
  display: block;
}

body.home #department_name {
  display: none;
}

#header_btm {
  border-top: 1px solid #e7e7e7;
}

#department_name {
  background-color: #024731;
  background-size: cover;
  border: none;
  margin-bottom: 10px;
  padding: 36px 0 20px;
  position: relative;
  z-index: 2;
}
#department_name::after {
  background-color: #024731;
  content: '';
  display: block;
  height: 100%;
  opacity: .8;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 90;
}
#department_name .container {
  position: relative;
  z-index: 92;
}
.child-page-title {
  font-weight: 400;
}
.breadcrumbs {
  color: #fff;
}
nav#breadcrumbs li,
nav#breadcrumbs li a,
nav#breadcrumbs
{
  color: #fff;
}
#department_name h1.entry-title {
  color: #fff;
}

/* style page with anchors */
.page-template-page-anchors .page {
  display: grid;
  grid-template-columns: minmax(0, 1fr);
  grid-template-rows: 3;
}
.page-template-page-anchors .page > h1.entry-title {
  grid-row-start: 1;
}
.page-template-page-anchors .page .entry-content {
  grid-row-start: 3;
}
.page-template-page-anchors .page .anchors {
  grid-row-start: 2;
}

.page-template-page-academic-group .anchors {
  padding-top: 20px;
}

.page-template-page-academic-group .entry-content-container {
  display: grid;
  grid-template-columns: minmax(0, 1fr);
  grid-template-rows: 2;
}

.page-template-page-academic-group .entry-content-container .entry-content {
  padding-top: 0;
}

.page-template-page-academic-group .entry-content-container .entry-content {
  grid-row-start: 2;
}

.page-template-page-academic-group .entry-content-container .anchors {
  grid-row-start: 1;
  margin: .5em 0 0;
}

/* style academic group page titles */
.page-template-page-academic-group #content h1.parent-title {
  border-bottom: 1px solid #e7e7e7;
  font-size: 2em;
  font-weight: 700;
  margin: 1em 0;
  padding-bottom: .75em;
}
#content h1.parent-title + h1.entry-title {
  font-size: 1.75em;
  margin-top: 0;
}
.page-template-page-academic-group #content h1 {
  font-size: 1.55em;
}
.page-template-page-academic-group #content h2 {
  font-size: 22px;
}
.page-template-page-academic-group #primary ul.secondary > li.page_item_has_children:not(.current_page_item) {
  display: none;
}
.page-template-page-academic-group #primary .secondary ul.children {
    display: block;
}
.single #nav-below {
  border-top: 0;
}

.course-tags {
  margin-top: 8px;
}

.course-tags a {
  display: inline-block;
  margin-right: 5px;
}

.home #footer_top_content {
  border-top: 0;
}

#content ul.homepage-widgets li + li {
  margin-top: 0;
}

ul.homepage-widgets li {
  margin-bottom: 20px;
}

#schools-list {
  background: #e7e7e7;
  padding: 24px 0;
}
.schools-list {
  line-height: 1.3;
  margin-bottom: 40px;
}
.schools-list ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
.schools-list ul > li + li {
  margin-top: 12px;
}
.schools-list a {
  color: #333;
  font-weight: 600;
  text-decoration: none;
}
.schools-list a:hover,
.schools-list a:focus,
.schools-list a:active {
  color: #024731;
  border-bottom: 1px solid #024731;
}
.academic-groups {
  text-align: center;
}
@media only screen and (min-width: 761px) {
  .schools-list ul {
    column-count: 3;
    column-gap: 30px;
  }
}
.page-template-page-children .entry-content .children {
  display: none;
}
@media only screen and (min-width: 761px) {
  .page-template-page-children ul.child-pages {
    column-count: 2;
    column-gap: 40px;
  }
}
.page-template-page-children ul.child-pages,
.page-template-page-children ul ul {
  list-style: none;
}
.page-template-page-children ul > li > ul {
  margin-left: 0;
  padding-left: 20px;
}
.page-template-page-children ul.child-pages > li {
  white-space: nowrap;
}
ul.child-pages a {
  color: #333;
  text-decoration: none;
}
ul.child-pages a:hover,
ul.child-pages a:focus,
ul.child-pages a:active {
  text-decoration: underline;
}
.page-template-page-children ul.child-pages > li > a {
  font-weight: 700;
}
.page-template-page-children #content ul > li > ul.children {
  margin-top: 8px;
}
/* ... */

